src/objects/RollUp__RollUp__c.object
<CustomObject>
    <fields>
        <fullName>RollUp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollUp__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__Convert_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Currency?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollUp__Delimiter__c</fullName>
        <label>Delimiter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RollUp__Filter_Condition_Computed__c</fullName>
        <inlineHelpText>SOQL where clause for filtering child records.  If filter conditions are defined, this field is automatically computed.</inlineHelpText>
        <label>Filter Condition Computed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RollUp__Filter_Condition__c</fullName>
        <inlineHelpText>Example: ((1 and 2) or (3 and 4)) and 5</inlineHelpText>
        <label>Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Last_Error__c</fullName>
        <label>Last Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RollUp__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RollUp__Main_Query_String__c</fullName>
        <label>Main Query String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RollUp__Next_Run__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Next Run</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RollUp__Only_Update_Records_with_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Update Records with Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollUp__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Mode</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Standard Deviation</fullName>
                </value>
                <value>
                    <fullName>Concatenate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RollUp__Records_Errored__c</fullName>
        <label>Records Errored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__Records_Processed__c</fullName>
        <label>Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__Records_Skipped__c</fullName>
        <formula>RollUp__Records_Processed__c - RollUp__Records_Updated__c - RollUp__Records_Errored__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Records Skipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__Records_Updated__c</fullName>
        <label>Records Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__Refresh_Interval__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>in minutes</inlineHelpText>
        <label>Refresh Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp__Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Source_Field_API_Name__c</fullName>
        <label>Source Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Source_Object_API_Name__c</fullName>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Target_Field_API_Name__c</fullName>
        <label>Target Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Target_Object_API_Name__c</fullName>
        <label>Target Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp__Treat_Null_as_Zero__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Treat Null as Zero</label>
        <type>Checkbox</type>
    </fields>
    <label>RollUp</label>
    <listViews>
        <fullName>RollUp__All</fullName>
        <columns>NAME</columns>
        <columns>RollUp__Active__c</columns>
        <columns>RollUp__Next_Run__c</columns>
        <columns>RollUp__Source_Object_API_Name__c</columns>
        <columns>RollUp__Source_Field_API_Name__c</columns>
        <columns>RollUp__Target_Object_API_Name__c</columns>
        <columns>RollUp__Target_Field_API_Name__c</columns>
        <columns>RollUp__Relationship_Name__c</columns>
        <columns>RollUp__Operation__c</columns>
        <columns>RollUp__Batch_Size__c</columns>
        <columns>RollUp__Convert_Currency__c</columns>
        <columns>RollUp__Delimiter__c</columns>
        <columns>RollUp__Last_Error__c</columns>
        <columns>RollUp__Last_Run__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RU-{000000}</displayFormat>
        <label>RollUp Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollUps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RollUp__Batch_size_must_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>RollUp__Batch_Size__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>RollUp__Batch_Size__c</errorDisplayField>
        <errorMessage>Batch size must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RollUp__Delimiter_is_required_for_concatenate</fullName>
        <active>true</active>
        <errorConditionFormula>isblank(RollUp__Delimiter__c) &amp;&amp; ispickval(RollUp__Operation__c, &apos;Concatenate&apos;)</errorConditionFormula>
        <errorDisplayField>RollUp__Delimiter__c</errorDisplayField>
        <errorMessage>Delimiter is required for concatenate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RollUp__Operation_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(RollUp__Operation__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>RollUp__Operation__c</errorDisplayField>
        <errorMessage>Operation is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RollUp__source_object_cannot_be_changed_once_set</fullName>
        <active>true</active>
        <errorConditionFormula>!isnew() &amp;&amp; ischanged(RollUp__Source_Object_API_Name__c)</errorConditionFormula>
        <errorMessage>Source object cannot be changed once set.</errorMessage>
    </validationRules>
</CustomObject>